Added More Features

--- a/index.html
+++ b/index.html
@@ -17,16 +17,37 @@
             placeholder="type your todo.."
             required
           />
-          <span><i class="fa-solid fa-circle-plus"></i></span>
+          <span id="plus"><i class="fa-solid fa-circle-plus"></i></span>
         </div>
         <div class="operations">
           <div>
-            <span></span>
+            <span><i class="fa-solid fa-check-double"></i></span>
             <span>Completed all tasks</span>
           </div>
           <div>Clear Completed</div>
         </div>
-        <div class="todos"></div>
+        <div class="todos">
+          <div class="todo">
+            <div class="select-btn">
+              <input type="radio" />
+            </div>
+            <div class="todo-task">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever since the 1500s, when an unknown printer took a galley of
+              type and scrambled it to make a type specimen book. It has
+              survived not only five centuries, but also the leap into
+              electronic typesetting, remaining essentially unchanged. It was
+              popularised in the 1960s with the release of Letraset sheets
+              containing Lorem Ipsum passages, and more recently with desktop
+              publishing software like Aldus PageMaker including versions of
+              Lorem Ipsum.
+            </div>
+            <div class="delete-btn">
+              <i class="fa-solid fa-delete-left"></i>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <script
