Start to Implement More Feature

--- a/index.html
+++ b/index.html
@@ -48,6 +48,16 @@
             </div>
           </div>
         </div>
+        <div class="footer">
+          <div class="task">
+            <span>4</span>
+            <span>tasks left</span>
+          </div>
+          <div class="choices">
+            <span>All</span>&nbsp; <span>Uncompleted</span>&nbsp;
+            <span>Completed</span>
+          </div>
+        </div>
       </div>
     </div>
     <script
