Added More Features to the App

--- a/index.html
+++ b/index.html
@@ -64,5 +64,6 @@
       src="https://kit.fontawesome.com/a4636622a9.js"
       crossorigin="anonymous"
     ></script>
+    <script src="script.js"></script>
   </body>
 </html>
