Added More Featrues to the App

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               publishing software like Aldus PageMaker including versions of
               Lorem Ipsum.
             </div>
-            <div class="delete-btn">
+            <div class="delete-btn" onclick="deleteTodo(2)">
               <i class="fa-solid fa-delete-left"></i>
             </div>
           </div>
