--- a/index.html
+++ b/index.html
@@ -47,10 +47,30 @@
               <i class="fa-solid fa-delete-left"></i>
             </div>
           </div>
+          <div class="todo">
+            <div class="select-btn">
+              <input type="radio" />
+            </div>
+            <div class="todo-task">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever since the 1500s, when an unknown printer took a galley of
+              type and scrambled it to make a type specimen book. It has
+              survived not only five centuries, but also the leap into
+              electronic typesetting, remaining essentially unchanged. It was
+              popularised in the 1960s with the release of Letraset sheets
+              containing Lorem Ipsum passages, and more recently with desktop
+              publishing software like Aldus PageMaker including versions of
+              Lorem Ipsum.
+            </div>
+            <div class="delete-btn" onclick="deleteTodo(2)">
+              <i class="fa-solid fa-delete-left"></i>
+            </div>
+          </div>
         </div>
         <div class="footer">
           <div class="task">
-            <span>4</span>
+            <span id="task-count">0</span>
             <span>tasks left</span>
           </div>
           <div class="choices">
