Added More Feature to the App

--- a/index.html
+++ b/index.html
@@ -26,61 +26,7 @@
           </div>
           <div>Clear Completed</div>
         </div>
-        <div class="todos">
-          <div class="todo">
-            <div class="select-btn">
-              <input type="radio" xlass="task-done" />
-            </div>
-            <div class="todo-task">
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry. Lorem Ipsum has been the industry's standard dummy text
-              ever since the 1500s, when an unknown printer took a galley of
-              type and scrambled it to make a type specimen book. It has
-              survived not only five centuries, but also the leap into
-              electronic typesetting, remaining essentially unchanged. It was
-              popularised in the 1960s with the release of Letraset sheets
-              containing Lorem Ipsum passages, and more recently with desktop
-              publishing software like Aldus PageMaker including versions of
-              Lorem Ipsum.
-            </div>
-            <div class="operation-btn">
-              <div class="delete-btn" onclick="deleteTodo(2)">
-                <i class="fa-solid fa-delete-left"></i>
-              </div>
-              <div
-                class="update-btn"
-                onclick="prompt('Please Enter Value','Nothing')"
-              >
-                <i class="fa-regular fa-pen-to-square"></i>
-              </div>
-            </div>
-          </div>
-          <div class="todo">
-            <div class="select-btn">
-              <input type="radio" />
-            </div>
-            <div class="todo-task">
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry. Lorem Ipsum has been the industry's standard dummy text
-              ever since the 1500s, when an unknown printer took a galley of
-              type and scrambled it to make a type specimen book. It has
-              survived not only five centuries, but also the leap into
-              electronic typesetting, remaining essentially unchanged. It was
-              popularised in the 1960s with the release of Letraset sheets
-              containing Lorem Ipsum passages, and more recently with desktop
-              publishing software like Aldus PageMaker including versions of
-              Lorem Ipsum.
-            </div>
-            <div class="operation-btn">
-              <div class="delete-btn" onclick="deleteTodo(2)">
-                <i class="fa-solid fa-delete-left"></i>
-              </div>
-              <div class="update-btn" onclick="updateTodo(Nothing)">
-                <i class="fa-regular fa-pen-to-square"></i>
-              </div>
-            </div>
-          </div>
-        </div>
+        <div class="todos"></div>
         <div class="footer">
           <div class="task">
             <span id="task-count">0</span>
