Added Add ,Update and Delete Operations

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
           <span id="plus"><i class="fa-solid fa-circle-plus"></i></span>
         </div>
         <div class="operations">
-          <div>
+          <div id="complete-all">
             <span><i class="fa-solid fa-check-double"></i></span>
             <span>Completed all tasks</span>
           </div>
-          <div>Clear Completed</div>
+          <div id="remove-completed">Remove Completed</div>
         </div>
         <div class="todos"></div>
         <div class="footer">
