--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             <span>tasks left</span>
           </div>
           <div class="choices">
-            <span>All</span>&nbsp; <span>Uncompleted</span>&nbsp;
-            <span>Completed</span>
+            <span id="0">All</span>&nbsp; <span id="1">Uncompleted</span>&nbsp;
+            <span id="2">Completed</span>
           </div>
         </div>
       </div>
