Added More Feature and Complete the Project

--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
             <span><i class="fa-solid fa-check-double"></i></span>
             <span>Completed all tasks</span>
           </div>
-          <div id="remove-completed">Remove Completed</div>
+          <div id="remove-completed">
+            <span><i class="fa-solid fa-ban"></i></span>
+            <span>Remove Completed</span>
+          </div>
         </div>
         <div class="todos"></div>
         <div class="footer">
