--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ToDo App</title>
+    <link
+      rel="shortcut icon"
+      type="icon/image"
+      href="./clipboard-list-solid.svg"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
